--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,7 +32,7 @@ nav:
 - '✉️ Contact': 'https://app.velohero.com/help'
 - '📜 About this site': 'https://app.velohero.com/imprint'
 use_directory_urls: false
-repo_url: https://github.com/velohero/velohero-help
+repo_url: https://github.com/velohero-com/help
 theme:
   language: 'en'
   name: 'material'
