--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
   - 'Remove Peaks from your Recording': how-do-i-remove-peaks-from-a-recording.md
   - 'Synchronization Garmin Connect, TrainingPeaks, Strava': synchronization.md
   - 'Withings': withings.md
+  - 'Zwift': zwift.md
 - 'Frequently Asked Questions': faq.md
 - 'Glossary': glossary.md
 - '🔑 Login': 'https://app.velohero.com/login'
