--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,7 +33,6 @@ nav:
 - '✉️ Contact': 'https://app.velohero.com/help'
 - '📜 About this site': 'https://app.velohero.com/imprint'
 use_directory_urls: false
-repo_url: https://github.com/velohero-com/help
 theme:
   language: 'en'
   name: 'material'
@@ -44,3 +43,8 @@ theme:
     accent: 'black'
 markdown_extensions:
   - admonition
+# Plugins
+plugins:
+  - search
+  - minify:
+      minify_html: true
